--- a/compose/production/nginx/nginx.conf
+++ b/compose/production/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream localhost {
+upstream django {
     server django:8000;
 }
 
@@ -7,10 +7,14 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://hello_django;
+        proxy_pass http://django;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+    }
+
+    location /static {
+        
     }
 
 }
