--- a/compose/production/nginx/Dockerfile
+++ b/compose/production/nginx/Dockerfile
@@ -2,3 +2,5 @@ FROM nginx:1.17.4-alpine
 
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./compose/production/nginx/nginx.conf /etc/nginx/conf.d
+
+COPY ./staticfiles/ /static
