--- a/compose/production/nginx/nginx.conf
+++ b/compose/production/nginx/nginx.conf
@@ -13,8 +13,11 @@ server {
         proxy_redirect off;
     }
 
-    location /static {
-        
+    location /static/ {
+        alias  /static/;
+        expires 1y;
+        access_log off;
+        add_header Cache-Control "public";
     }
 
 }
